--- a/index.html
+++ b/index.html
@@ -5,14 +5,84 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Spotify Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="styles/style.css" />
   </head>
   <body>
-    Premium Discover Help Download Music for everyone. Spotify is now free on mobile, tablet and computer. Listen to the
-    right music, wherever you are. What’s on Spotify? Millions of Songs There are millions of songs on Spotify HD Music
-    Listen to music as if you were listening live Stream Everywhere Stream music on your smartphone, tablet or computer
-    It’s as yeezy as Kanye West. Search Know what you want to listen to? Just search and hit play. Browse Check out the
-    latest charts, brand new releases and great playlists for right now. Discover Enjoy new music every Monday with your
-    own personal playlist. Or sit back and enjoy Radio.
+    <!--Header Section-->
+    <header>
+      <nav>
+        <div class="logo">
+          <img src="images/spotify-logo.png" alt="spotify logo" />
+        </div>
+        <div>
+          <ul class="nav-links">
+            <li><a href="">Premium</a></li>
+            <li><a href="">Discover</a></li>
+            <li><a href="">Help</a></li>
+            <li><a href="">Download</a></li>
+          </ul>
+        </div>
+      </nav>
+    </header>
+    <!--Hero Section-->
+    <main>
+      <section class="hero">
+        <div class="text-content">
+          <h1>Music for everyone</h1>
+          <p class="hero-p">
+            Spotify is now free on mobile, tablet and computer. <br />Listen to
+            the right music, where ever you are.
+          </p>
+        </div>
+      </section>
+      <section class="features">
+        <h2>What's on Spotify?</h2>
+        <div class="cols-container">
+          <div class="image-container">
+            <img src="images/music-icon.png" alt="music icon" />
+            <h3 class="light-blue-header">Millions of Songs</h3>
+            <p>There are million of songs on spotify</p>
+          </div>
+          <div class="image-container">
+            <img src="images/high-quality-icon.png" alt="music icon" />
+            <br />
+            <br />
+            <h3 class="light-blue-header">HD Music</h3>
+            <p>Listen to music as if you were listening live</p>
+          </div>
+          <div class="image-container">
+            <img src="images/devices-icon.png" alt="music icon" />
+            <h3 class="light-blue-header">Stream Everywhere</h3>
+            <p>Stream music on your smartphone, tablet or computer</p>
+          </div>
+        </div>
+      </section>
+      <section class="discover">
+        <div class="discover-container">
+          <h3 class="yeezy-text">It's as yeezy as Kanye West</h3>
+          <h3 class="search-text">Search</h3>
+          <p>
+            Know what you want to listen to? <br />
+            Just search and hit play
+          </p>
+          <h3 class="search-text">Browse</h3>
+          <p>
+            Check out the latest charts, brand new releases and great playlists
+            for right now.
+          </p>
+          <h3 class="search-text">Discover</h3>
+          <p>
+            Enjoy new music every Monday with your own personal playlist or sit
+            back and enjoy Radio.
+          </p>
+        </div>
+        <div class="white-icon-container">
+          <img src="images/spotify-icon-white.png" alt="spotify white logo" />
+        </div>
+        <div class="app-container">
+          <img src="images/spotify-app.jpg" alt="spotify app" />
+        </div>
+      </section>
+    </main>
   </body>
 </html>
